# lembas-planingfsi

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  lembas.toml  pixi.toml  pyproject.toml
.github/workflows/: build.yml  pre-commit.yaml  publish.yml  test.yml
conda.recipe/: recipe.yaml
src/lembas_planingfsi/: __init__.py  flat_plate.py
tests/: test_flat_plate.py
