[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42"]

[project]
name = "lembas-planingfsi"
version = "0.1.0"
description = "Lembas plugin for planingfsi hydrodynamic simulations"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
  "lembas",
  "planingfsi",
]

[project.entry-points."lembas.plugins"]
planingfsi = "lembas_planingfsi:Plugin"

[tool.setuptools.packages.find]
where = ["src"]
