[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "lembas-planingfsi"
dynamic = ["version"]
description = "Lembas plugin for planingfsi hydrodynamic simulations"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
  # lembas and planingfsi are provided as conda dependencies, not PyPI
  # See pixi.toml for the actual dependencies
]

[project.optional-dependencies]
dev = ["pytest"]

[project.entry-points."lembas.plugins"]
planingfsi = "lembas_planingfsi:Plugin"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/lembas_planingfsi/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/lembas_planingfsi"]
