[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
dependencies = [
]
description = "Lembas plugin for planingfsi hydrodynamic simulations"
dynamic = ["version"]
license = {text = "MIT"}
name = "lembas-planingfsi"
requires-python = ">=3.11"

[project.entry-points."lembas.plugins"]
planingfsi = "lembas_planingfsi:Plugin"

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.hooks.vcs]
version-file = "src/lembas_planingfsi/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/lembas_planingfsi"]

[tool.hatch.version]
source = "vcs"
